<resources>
    <string name="app_name">Buzz Spark</string>

    <!--Category View-->
    <string name="category">Categories</string>
    <string name="cat1">Paintings</string>
    <string name="cat2">Sculptures</string>
    <string name="cat3">Drawings</string>
    <string name="cat4">Photographs</string>
    <string name="cat5">Posters</string>
    <string name="cat6">Prints</string>


    <!--Cargory Detiled view-->
    <string name="type">Art Type</string>
    <string name="desc">Description</string>
    <string name="price">Price</string>
    <string name="image">Image</string>

    <!--Item Detail View-->
    <string name="ship">Shipping</string>
    <string name="ret">Returns</string>
    <string name="text">xxxxxxxxxxxxxxxxxxxxxxx</string>
    <string name="btn1">Back</string>
    <string name="btn2">Buy Now</string>
    <string name="btn3">Add to cart</string>
    <string name="btn4">Message</string>

    <string name="username">Username</string>

    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="logiin">Login</string>
    <string name="already_registered">Already registered?</string>
    <string name="sign_in">Sign in</string>
    <string name="login">Login</string>
    <string name="not_registered">Not registered?</string>
    <string name="register">Register</string>
    <string name="feedback">FeedBack</string>
    <string name="submit">SUBMIT</string>
    <string name="edit_your_profile">Edit your Profile</string>
    <string name="your_name">Your name</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="save">SAVE</string>
    <string name="address">Address</string>
    <string name="gender">Gender</string>
    <string name="mobile_phone">Mobile Phone</string>
    <string name="location">Location</string>
    <string name="bday">Date of Birth</string>
    <string name="display_name">Display name</string>

    <string name="home_page">Home Page</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_new">ADD NEW</string>
    <string name="item_no">START CHAT ON ITEM NO</string>
    <string name="send">SEND</string>
    <string name="textview">TextView</string>
    <string name="message">type your message here</string>
    <string name="delete">DELETE</string>
    <string name="hint">Long press on an chat item to delete all entries</string>
    <string name="welcome_msg">Enter into a group chat on product or create one</string>             
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="add_new_product">Add New Product</string>
    <string name="product_name">Product Name..</string>
    <string name="product_descripion">Product Descripion..</string>
    <string name="product_price">Product Price..</string>
    <string name="add_product">Add Product</string>
    <string name="todo">TODO</string>
    <string-array name="country">
        <item>Sri Lanka</item>
        <item>Canada</item>
        <item>USA</item>
        <item>UK</item>
        <item>Japan</item>
        <item>China</item>
        <item>Australia</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string-array name="country">
        <item>Sri Lanka</item>
        <item>Canada</item>
        <item>USA</item>
        <item>UK</item>
        <item>Japan</item>
        <item>China</item>
        <item>Australia</item>
    </string-array>

</resources>
