<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="127dp"
        android:layout_marginTop="60dp"
        android:src="@drawable/register1" />

    <EditText
        android:id="@+id/edittext_username"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:drawableLeft="@drawable/ic_action_username"
        android:background="#ffffff"
        android:layout_marginTop="100dp"
        android:hint="@string/username" />

    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:drawableLeft="@drawable/ic_action_password"
        android:background="#ffffff"
        android:layout_marginTop="20dp"
        android:hint="@string/password" />

    <EditText
        android:id="@+id/edittext_cnfPassword"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:drawableLeft="@drawable/ic_action_password"
        android:background="#ffffff"
        android:layout_marginTop="20dp"
        android:hint="@string/confirm_password" />


    <Button
        android:id="@+id/log"
        android:layout_width="192dp"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"

        android:background="@drawable/buttonstyle"
        android:text="@string/register" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"/>


</LinearLayout>