<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="127dp"
        android:layout_marginTop="80dp"
        android:src="@drawable/login"/>

    <EditText
        android:id="@+id/edittext_username"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:drawableLeft="@drawable/ic_action_username"
        android:background="#ffffff"
        android:layout_marginTop="60dp"
        android:hint="@string/username" />

    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:drawableLeft="@drawable/ic_action_password"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:hint="@string/password" />

    <Button
        android:id="@+id/log"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/buttonstyle"
        android:text="@string/login" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/button5"
        android:layout_width="202dp"
        android:layout_height="wrap_content"
        android:background="@drawable/buttonstyle"
        android:text="Register Here" />


</LinearLayout>