<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back2h"
    tools:context=".CategoryView">

    <TextView
        android:id="@+id/textView"
        android:layout_width="160dp"
        android:layout_height="43dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/category"
        android:textColor="@color/azur"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:clickable="true"
        android:contentDescription="@string/cat2"
        android:focusable="true"
        android:onClick="catDetailView"
        android:src="@drawable/painting"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.884"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.158" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:clickable="true"
        android:contentDescription="@string/cat5"
        android:focusable="true"
        android:onClick="catDetailView"
        android:src="@drawable/painting"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.115"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.843" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:clickable="true"
        android:contentDescription="@string/cat3"
        android:focusable="true"
        android:onClick="catDetailView"
        android:src="@drawable/painting"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.115"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:clickable="true"
        android:contentDescription="@string/cat6"
        android:focusable="true"
        android:onClick="catDetailView"
        android:src="@drawable/painting"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.884"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.843" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:contentDescription="@string/cat4"
        android:onClick="catDetailView"
        android:src="@drawable/painting"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.884"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:clickable="true"
        android:contentDescription="@string/cat1"
        android:focusable="true"
        android:onClick="catDetailView"
        android:src="@drawable/painting"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.115"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.158" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="90dp"
        android:layout_height="29dp"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:onClick="catDetailView"
        android:text="@string/cat1"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView8"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView7"
        app:layout_constraintVertical_bias="0.415" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="107dp"
        android:layout_height="26dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:onClick="catDetailView"
        android:text="@string/cat2"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.74"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:layout_constraintVertical_bias="0.446" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="76dp"
        android:layout_height="29dp"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:onClick="catDetailView"
        android:text="@string/cat3"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView8"
        app:layout_constraintVertical_bias="0.191" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="108dp"
        android:layout_height="29dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:onClick="catDetailView"
        android:text="@string/cat4"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.748"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/imageView10"
        app:layout_constraintVertical_bias="0.191" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="71dp"
        android:layout_height="25dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:onClick="catDetailView"
        android:text="@string/cat6"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.688"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/imageView9"
        app:layout_constraintVertical_bias="0.265" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="69dp"
        android:layout_height="27dp"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:onClick="catDetailView"
        android:text="@string/cat5"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6"
        app:layout_constraintVertical_bias="0.276" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="17dp"
        android:layout_marginRight="17dp"
        android:background="@drawable/buttonstyle"
        android:text="Profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>